<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/degrade"
	android:layout_gravity="center_vertical|center_horizontal|center">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="fill_parent"
		android:layout_centerInParent="true" android:background="@drawable/miny_icon">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="#000000"
			android:text="Miny Remote Home" android:textSize="20px" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="#000000"
			android:text="  " android:textSize="20px" />

		<Button android:text="@string/Home_MsgButtonLabel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/SendMsgButton"></Button>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="  "
			android:textSize="6px" />

		<Button android:text="@string/Home_CompassButtonLabel"
			android:id="@+id/CompassCommandButton" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></Button>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="  "
			android:textSize="6px" />

		<Button android:layout_height="wrap_content" android:text="@string/Home_GPSButtonLabel"
			android:layout_below="@+id/TableLayout01" android:layout_width="wrap_content"
			android:id="@+id/GPSButton"></Button>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="  "
			android:textSize="6px" />

		<Button android:layout_height="wrap_content" android:text="@string/Home_VoiceButtonLabel"
			android:layout_below="@+id/TableLayout01" android:layout_width="wrap_content"
			android:id="@+id/VoiceButton"></Button>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="  "
			android:textSize="6px" />
			
		<Button android:text="@string/Home_QRCodeButtonLabel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/QRCodeButton">
		</Button>

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="  "
			android:textSize="6px" />

		<Button android:text="Configuration" android:id="@+id/ConfigurationButton"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	</TableLayout>
</RelativeLayout>
